--- a/ClipboardManager/packages.config
+++ b/ClipboardManager/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="3.2.1" targetFramework="net461" />
+  <package id="Fody" version="3.3.3" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite.Core" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net461" />
