--- a/ClipboardManager/packages.config
+++ b/ClipboardManager/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Costura.Fody" version="3.2.1" targetFramework="net461" />
   <package id="Fody" version="3.3.3" targetFramework="net461" developmentDependency="true" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite.Core" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net461" />
